@@ -1,3 +1,8 @@
+2008-04-09  Aaron S. Hawley  <ashawley-@-sourceforge.net>
+
+	* php-mode.el (php-mode-modified): Resolve setting constant by
+	using format-time-string, but still using eval-when-compile.
+
 2008-04-07  Aaron S. Hawley  <ashawley-@-sourceforge.net>
 
 	* php-mode.el (php-beginning-of-defun-regexp): Support function
